; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_sdl.c_uninit.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_sdl.c_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.priv* }
%struct.priv = type { i32* }

@SDL_INIT_VIDEO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo*)* @uninit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uninit(%struct.vo* %0) #0 {
  %2 = alloca %struct.vo*, align 8
  %3 = alloca %struct.priv*, align 8
  store %struct.vo* %0, %struct.vo** %2, align 8
  %4 = load %struct.vo*, %struct.vo** %2, align 8
  %5 = getelementptr inbounds %struct.vo, %struct.vo* %4, i32 0, i32 0
  %6 = load %struct.priv*, %struct.priv** %5, align 8
  store %struct.priv* %6, %struct.priv** %3, align 8
  %7 = load %struct.vo*, %struct.vo** %2, align 8
  %8 = call i32 @destroy_renderer(%struct.vo* %7)
  %9 = load %struct.priv*, %struct.priv** %3, align 8
  %10 = getelementptr inbounds %struct.priv, %struct.priv* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = call i32 @SDL_DestroyWindow(i32* %11)
  %13 = load %struct.priv*, %struct.priv** %3, align 8
  %14 = getelementptr inbounds %struct.priv, %struct.priv* %13, i32 0, i32 0
  store i32* null, i32** %14, align 8
  %15 = load i32, i32* @SDL_INIT_VIDEO, align 4
  %16 = call i32 @SDL_QuitSubSystem(i32 %15)
  %17 = load %struct.priv*, %struct.priv** %3, align 8
  %18 = call i32 @talloc_free(%struct.priv* %17)
  ret void
}

declare dso_local i32 @destroy_renderer(%struct.vo*) #1

declare dso_local i32 @SDL_DestroyWindow(i32*) #1

declare dso_local i32 @SDL_QuitSubSystem(i32) #1

declare dso_local i32 @talloc_free(%struct.priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
